# mit6.824

./: README.md
distsys/: Cargo.toml  build.rs
distsys/proto/: mr.proto
distsys/src/: lib.rs  mr.rs  test_mr.rs  util.rs
distsys/src/main/: mod.rs
distsys/src/mr/: master.rs  mod.rs  rpc.rs  worker.rs
distsys/src/mrapps/: mod.rs  wc.rs
distsys/src/mrrt/: sequential.rs
src/: go.mod
src/main/: mrsequential.go
src/mrapps/: wc.go
